# pg_prefix_search

./: LICENSE  README.rst  pyproject.toml
pg_prefix_search/: models.py  search.py
pg_prefix_search/migrations/: 0001_initial.py
pg_prefix_search/scripts/: makemigrations.py  mock_settings.py
tests/: test_pg_prefix_search.py
