[tool.poetry]
name = "pg-prefix-search"
version = "0.1.0"
description = "Text search by word fragments using Postgres-specific indices."
authors = ["Szymon Sobczak <szymon@solvbot.pl>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^3.2"
Unidecode = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
